--- a/zadanie19_2.html
+++ b/zadanie19_2.html
@@ -6,24 +6,28 @@
         function validatePassword() {
             var password = document.getElementById("password").value;
             var confirmPassword = document.getElementById("confirmPassword").value;
+            var messageContainer = document.getElementById("messageContainer");
+
+            messageContainer.innerHTML = "";
 
             if (password.length < 8) {
-                alert("Hasło powinno zawierać minimum 8 znaków.");
-                return false;
+                messageContainer.innerHTML += "<p>Hasło powinno zawierać minimum 8 znaków.</p>";
             }
 
             if (password !== confirmPassword) {
-                alert("Hasło i powtórzone hasło nie są takie same.");
-                return false;
+                messageContainer.innerHTML += "<p>Hasło i powtórzone hasło nie są takie same.</p>";
             }
             var passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]+$/;
             if (!passwordRegex.test(password)) {
-                alert("Hasło powinno zawierać przynajmniej jedną dużą literę, jedną małą literę, jeden znak specjalny i cyfrę.");
-                return false;
+                messageContainer.innerHTML += "<p>Hasło powinno zawierać przynajmniej jedną dużą literę, jedną małą literę, jeden znak specjalny i cyfrę.</p>";
             }
 
-            alert("Hasło spełnia wszystkie wymagania.");
-            return true;
+            if (messageContainer.innerHTML === "") {
+                messageContainer.innerHTML = "<p>Hasło spełnia wszystkie wymagania.</p>";
+                return true;
+            } else {
+                return false;
+            }
         }
     </script>
 </head>
@@ -31,12 +35,13 @@
 <h1>Walidacja hasła</h1>
 <form onsubmit="return validatePassword()">
     <label for="password">Hasło:</label>
-    <input type="password" id="password" required><br><br>
+    <input type="password" id="password" required onkeyup="validatePassword()"><br><br>
 
     <label for="confirmPassword">Powtórz hasło:</label>
     <input type="password" id="confirmPassword" required><br><br>
 
     <input type="submit" value="Sprawdź hasło">
 </form>
+<div id="messageContainer"></div>
 </body>
 </html>
